removed smallThumbnailLink
